# temporal-demo

./: pyproject.toml
server/: client_import.py  client_subtitle.py
tests/: test_run_worker.py
worker/import_failed/workflow_import/: activities.py  workflows.py
worker/import_worker/: worker_import.py
worker/import_worker/workflow_import/: activities.py  workflows.py
worker/subtitle/: worker_prof.py  worker_subtitle.py
worker/subtitle/workflow_subtitle/: activities_prof.py  activities_subtitle.py  workflows_prof.py  workflows_subtitle.py
